--- a/src/components/input-text/input-text.pug
+++ b/src/components/input-text/input-text.pug
@@ -1,2 +1,2 @@
-mixin input-text(name)
-  input(placeholder = name, type = 'text', class='input-text')
+mixin input-text(name, className)
+  input(placeholder = name, type = 'text', class='input-text' class= className)
