--- a/src/components/signin-form/signin-form.pug
+++ b/src/components/signin-form/signin-form.pug
@@ -3,11 +3,11 @@ mixin form-signin(title, login)
   div(class='form-signin')
     div(class='form-signin__container')
       h1(class='form-signin__title')= title
-      +input-text('Email')
-      div(class='form-signin__input form-signin__input_second')
-        +input-text('Пароль')
+      +input-text('Email', 'input-text_size_signin')
+      div(class='form-signin__input form-signin__input_type_password')
+        +input-text('Пароль', 'input-text_size_signin')
       div(class='form-signin__button')
-        +button({name: 'Войти', link: '#', className: 'btn__confirm'} )
+        +button({name: 'Войти', link: '#', className: 'btn__confirm btn__confirm_size_signin'} )
       div(class='form-signin__wrapper')
         div(class='form-signin__text')= login
         div(class='form-signin__create')
