--- a/src/blocks/calculator/calculator.pug
+++ b/src/blocks/calculator/calculator.pug
@@ -12,13 +12,13 @@ mixin calculator(calculator)
                     span(class="calculator__per-day")= calculator.day
             div(class='calculator__subtitles')
                 p(class='calculator__subtitle')= calculator.checkin
-                p(class='calculator__subtitle calculator__subtitle_checkout')= calculator.checkout
+                p(class='calculator__subtitle calculator__subtitle_type_checkout')= calculator.checkout
             div(class='calculator__datepicker')
-                +datepicker
+                +datepicker('date-dropdown__input_size_calc')
             p(class='calculator__subtitle')= calculator.titleDropdown
             div(class='calculator__dropdown')
                 +dropdown( {id: 'dd-text', name: 'Сколько гостей'}, { name:'Взрослые', number: 'adult_text', plus: 'adult_plus', minus: 'adult_minus'},  {name: 'Дети', number: 'child_text', plus: 'child_plus', minus: 'child_minus' }, {name: 'Младенцы', number: 'baby_text', plus: 'baby_plus', minus: 'baby_minus'})
-            div(class='calculator__price calculator__price_count')
+            div(class='calculator__price')
                 div
                     p(class='calculator__text')= calculator.calculationOfThePrice
                 div
@@ -31,12 +31,12 @@ mixin calculator(calculator)
                 p(class='calculator__text') 0P
             div(class='calculator__price')
                 div(class='calculator__wrap')
-                    p(class='calculator__text calculator__text_tax')= calculator.addTax
+                    p(class='calculator__text calculator__text_theme_tax')= calculator.addTax
                     div
-                        span(class='calculator__info calculator__info_extra') i
+                        span(class='calculator__info') i
                 p(class='calculator__text')= calculator.additionalTax
             h3(class='calculator__total-price')= calculator.totalPrice
-            +button({name: 'забронировать', link: '#', className: 'btn__confirm'})
+            +button({name: 'забронировать', link: '#', className: 'btn__confirm btn__confirm_size_footer'})
                 
 
 
