--- a/src/blocks/single-airdatepicker/single-airdatepicker.scss
+++ b/src/blocks/single-airdatepicker/single-airdatepicker.scss
@@ -17,7 +17,7 @@
   }
 }
 
-#single-range {
+.single-range {
   width: 395px;
   height: 65px;
   border: 1px solid rgba(31, 32, 65, 0.25);
@@ -913,6 +913,16 @@
     content: "";
     height: 42px;
     right: 14px;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .single-range {
+    &_size{
+      &_sidebar{
+        width: 300px;
+      }
+    }
   }
 }
 
