--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -13,6 +13,21 @@
     font-family: "OpenSans-Bold";
     background: white;
     cursor: pointer;
+    &_header {
+      display: inline-block;
+      padding: 11px 30px;
+      border: 2.4px solid #bc9cff;
+      text-transform: uppercase;
+      border-radius: 30px;
+      font-size: 17.5px;
+      color: #bc9cff;
+      text-decoration: none;
+      font-family: "OpenSans-Bold";
+      margin: 16px 25px 16px 23px;
+      display: inline-block;
+      background: white;
+      cursor: pointer;
+    }
   }
 
   &__signup {
@@ -61,15 +76,50 @@
       width: 390px;
       background-position-x: 22rem;
       background-position-y: 1.4rem;
+      &_size {
+        &_footer {
+          width: 460px;
+        }
+        &_signup {
+          width: 400px;
+        }
+        &_search{
+          width: 470px;
+        }
+        &_signin{
+          margin-bottom: 30px;
+          width: 440px;
+        }
+      }
     }
   }
 }
+
+@media only screen and (max-width: 500px) {
+  .btn__confirm {
+    &_size{
+      &_search{
+        max-width: 320px;
+      }
+    }
+  }
+}
+
 
 @media only screen and (max-width: 450px) {
   .btn {
     &__confirm {
       width: 390px;
       background-image: none;
+      &_size {
+        &_footer {
+          width: 370px;
+        }
+        &_signin{
+          margin-bottom: 30px;
+          width: 390px;
+        }
+      }
     }
   }
 }
@@ -78,6 +128,24 @@
   .btn {
     &__confirm {
       width: 300px;
+      &_size {
+        &_footer {
+          width: 290px;
+          height: 55px;
+        }
+        &_signup {
+          width: 290px;
+        }
+        &_search {
+          width: 280px;
+          height: 50px;
+        }
+        &_signin{
+          margin-bottom: 30px;
+          width: 300px;
+        }
+      }
     }
   }
 }
+
