--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -3,7 +3,7 @@ include ../logo/logo.pug
 mixin footer(footer, title, linkList1, linkList2, linkList3)
   footer(class='footer')
     div(class='footer__container')
-        div(class='footer__column footer__column_slogan')
+        div(class='footer__column footer__column_theme_slogan')
           +logo('logo logo_footer')
           div
             p(class='footer__slogan')= footer.slogan
@@ -25,7 +25,7 @@ mixin footer(footer, title, linkList1, linkList2, linkList3)
             each link in linkList3
               li(class='footer__item')
                a(class='footer__link')= link
-        div(class='footer__column footer__column_offer')
+        div(class='footer__column footer__column_theme_offer')
           h3(class='footer__subtitle')= title.name4
           p(class='footer__text')= footer.offer
           +input-subscription('Email')
