--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -13,12 +13,14 @@
   &__column {
     margin: 0 10px 10px;
     text-decoration: none;
-    &_slogan {
-      max-width: 380px;
-      margin-top: -10px;
-    }
-    &_offer {
-      max-width: 380px;
+    &_theme {
+      &_slogan {
+        max-width: 380px;
+        margin-top: -10px;
+      }
+      &_offer {
+        max-width: 380px;
+      }
     }
   }
   &__subtitle {
@@ -54,7 +56,7 @@
     justify-content: space-between;
     width: 80.5vw;
     margin: 0 auto;
-    & .svg-inline--fa{
+    & .svg-inline--fa {
       font-size: 38px;
     }
   }
@@ -80,12 +82,12 @@
     font-size: 1.14rem;
     line-height: 33px;
   }
-  &__row{
+  &__row {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
   }
-  &__icons{
+  &__icons {
     display: flex;
     flex-direction: row;
     list-style: none;
@@ -98,14 +100,13 @@
     cursor: pointer;
   }
   //These styles need for the gradient
-  &__gradient{
+  &__gradient {
     display: flex;
     font-size: 50px;
     color: red;
     & svg * {
       fill: url(#rg);
     }
-    
   }
 }
 
