--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -14,20 +14,22 @@
     margin-block-end: 0.1em;
     margin-block-start: 0.1em;
     margin-bottom: 5px;
-    &_price {
-      padding: 45px 0 31px 0;
-    }
-    &_checkboxes {
-      padding-top: 10px;
-      padding-bottom: 20px;
-    }
-    &_availability {
-      padding-top: 35px;
-      padding-bottom: 20px;
-    }
-    &_comfort {
-      padding-top: 30px;
-      padding-bottom: 8px;
+    &_type {
+      &_price {
+        padding: 45px 0 31px 0;
+      }
+      &_checkboxes {
+        padding-top: 10px;
+        padding-bottom: 20px;
+      }
+      &_availability {
+        padding-top: 35px;
+        padding-bottom: 20px;
+      }
+      &_comfort {
+        padding-top: 30px;
+        padding-bottom: 8px;
+      }
     }
   }
   &__range {
@@ -57,26 +59,6 @@
 }
 @media only screen and (max-width: 800px) {
   .sidebar {
-    &__close {
-      display: block;
-    }
-  }
-}
-@media only screen and (max-width: 400px) {
-  .sidebar {
-    &__datepicker {
-      & #single-range {
-        width: 300px;
-      }
-    }
-    &__dropdown {
-      & .little-dd__item {
-        width: 300px;
-      }
-    }
-    &__range #slider-range {
-      width: 300px;
-    }
     &__close {
       display: block;
     }
