--- a/src/components/signin-form/signin-form.scss
+++ b/src/components/signin-form/signin-form.scss
@@ -9,7 +9,7 @@
   &__container {
     padding: 32px 40px 40px 40px;
   }
-  &__title{
+  &__title {
     font-family: "OpenSans-Bold";
     font-style: normal;
     font-weight: bold;
@@ -17,16 +17,18 @@
     font-size: 1.89rem;
   }
   &__input {
-    &_second {
-      margin-top: 12px;
-      margin-top: 8px;
-      margin-bottom: 3px;
+    &_type {
+      &_password {
+        margin-top: 12px;
+        margin-top: 8px;
+        margin-bottom: 3px;
+      }
     }
   }
   &__button {
     margin-top: 26px;
   }
-  &__wrapper{
+  &__wrapper {
     display: flex;
     justify-content: space-between;
   }
@@ -51,13 +53,6 @@
     &__container {
       padding: 15px 5px;
     }
-    & .btn__confirm {
-      margin-bottom: 30px;
-      width: 440px;
-    }
-    &  .input-text {
-      max-width: 440px;
-    }
   }
 }
 
@@ -70,13 +65,6 @@
     &__text {
       margin: 0 auto;
       margin-top: 55px;
-    }
-    & .btn__signin {
-      margin: 0 auto;
-    }
-    & .btn__confirm {
-      margin-bottom: 30px;
-      width: 390px;
     }
   }
 }
@@ -91,10 +79,6 @@
     margin: 0 auto;
     &__container {
       padding: 15px 5px;
-    }
-    & .btn__confirm {
-      margin-bottom: 30px;
-      width: 300px;
     }
   }
 }
