--- a/src/components/button/button.pug
+++ b/src/components/button/button.pug
@@ -1,3 +1,4 @@
+- var classes = ['btn__signin_header', 'btn__confirm_size_footer', 'btn__confirm_size_signup', 'btn__confirm_size_search', 'btn__confirm_size_signin']
 mixin button(button)
   a(href= button.link)
-      button(type='button' class= button.className)= button.name
+      button(type='button' class= button.className class=button.additionalClass)= button.name
