--- a/src/components/form-search/form-search.pug
+++ b/src/components/form-search/form-search.pug
@@ -14,4 +14,4 @@ mixin form-search(title, subtitle)
         div(class='form-search__dropdown')
           +dropdown( {id: 'dd-text', name: 'Сколько гостей'}, { name:'Взрослые', number: 'adult_text', plus: 'adult_plus', minus: 'adult_minus'},  {name: 'Дети', number: 'child_text', plus: 'child_plus', minus: 'child_minus' }, {name: 'Младенцы', number: 'baby_text', plus: 'baby_plus', minus: 'baby_minus'})
         div(class='form-search__button')  
-          +button({name: 'подобрать номер', link: 'filter-page.html', className: 'btn__confirm btn__confirm_size_search'})
+          +button({name: 'подобрать номер', link: 'filter-page.html', className: 'btn__confirm', additionalClass: (classes.indexOf('btn__confirm_size_search') > -1) ? 'btn__confirm_size_search': ''})
