--- a/src/blocks/bullet-list/bullet-list.scss
+++ b/src/blocks/bullet-list/bullet-list.scss
@@ -35,6 +35,7 @@
   .bullet-list {
     &__item {
       font-size: 14px;
+      padding: 1px 0 0 1.3em;
     }
   }
 }
@@ -46,3 +47,5 @@
     }
   }
 }
+
+
