--- a/src/components/form-register/form-register.pug
+++ b/src/components/form-register/form-register.pug
@@ -6,9 +6,9 @@ mixin form-register(signup)
   div(class='signup')
     div(class='signup__container')
         h1( class='signup__title')= signup.title
-        div(class='signup__input signup__input_type_name')
+        div(class='signup__input-name')
           +input-text('Имя', 'input-text_size_signup')
-        div(class='signup__input signup__input_type_surname')
+        div(class='signup__input-surname')
           +input-text('Фамилия', 'input-text_size_signup')
 
         div(class="signup__radio-buttons")
@@ -16,23 +16,23 @@ mixin form-register(signup)
           div(class="signup__radio-buttons_woman")
             +radio-button('radio-button2', 'Женщина')
 
-        div(class='signup__input signup__input_type_birthday')
+        div(class='signup__input-birthday')
           div(class='signup__subtitle')= signup.birthday
           +input-text('ДД.ММ.ГГГГ', 'input-text_size_signup')
         
-        div(class='signup__input signup__input_type_data')
+        div(class='signup__input-data')
           div(class='signup__subtitle')= signup.data
           +input-text('Email', 'input-text_size_signup')
 
-        div(class='signup__input signup__input_data_type_password')
+        div(class='signup__input-password')
           +input-text('Пароль', 'input-text_size_signup')
 
-        div(class='signup__wrap')
+        div(class='signup__toggle')
           +toggle
           p(class='signup__offer')= signup.offer
 
         div(class='signup__button')
-          +button({name: 'перейти к оплате', link: '#', className: 'btn__confirm btn__confirm_size_signup'})
+          +button({name: 'перейти к оплате', link: '#', className: 'btn__confirm', additionalClass: (classes.indexOf('btn__confirm_size_signup') > -1) ? 'btn__confirm_size_signup': ''})
 
         div(class='signup__wrap')
           p(class='signup__text')= signup.login
