--- a/src/components/form-register/form-register.scss
+++ b/src/components/form-register/form-register.scss
@@ -37,25 +37,26 @@
       margin-left: 30px;
     }
   }
-  &__input {
-    &_type {
-      &_name {
-        padding-top: 5px;
-      }
-      &_surname {
-        padding-top: 15px;
-      }
-      &_birthday {
-        padding-top: 5px;
-      }
-      &_data {
-        padding-top: 30px;
-        &_password {
-          padding-top: 15px;
-          padding-bottom: 15px;
-        }
-      }
-    }
+  &__input-name {
+    padding-top: 5px;
+  }
+  &__input-surname {
+    padding-top: 15px;
+  }
+  &__input-birthday {
+    padding-top: 5px;
+  }
+  &__input-data {
+    padding-top: 30px;
+  }
+  &__input-password {
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
+  &__toggle {
+    display: flex;
+    flex-direction: row;
+    margin-top: 30px;
   }
   &__wrap {
     display: flex;
