--- a/src/components/sidebar/sidebar.pug
+++ b/src/components/sidebar/sidebar.pug
@@ -8,11 +8,10 @@ mixin sidebar()
         h3(class='sidebar__subtitle') гости
         div(class='sidebar__dropdown')
             +little-dropdown( {id: 'dd-text', name: 'Сколько гостей'}, { name:'Взрослые', number: 'adult_text', plus: 'adult_plus', minus: 'adult_minus'},  {name: 'Дети', number: 'child_text', plus: 'child_plus', minus: 'child_minus' }, {name: 'Младенцы', number: 'baby_text', plus: 'baby_plus', minus: 'baby_minus'})
-        .flex-row
             h3(class='sidebar__subtitle sidebar__subtitle_type_price') Диапазон цены
             input(type='text' class='slider-range-price' id='amount')
         div(class='sidebar__range')
-            +range-slider('slider-range', 'Стоимость за сутки пребывания в номере')
+            +range-slider('Стоимость за сутки пребывания в номере')
         h3(class='sidebar__subtitle sidebar__subtitle_type_checkboxes') Checkbox Buttons             
         div(class='sidebar__checkbox')
             +checkbox({name:'Smoking', label: 'Можно курить', nameClass: 'sidebar__checkbox'})
