--- a/src/pages/search-page/search-page.pug
+++ b/src/pages/search-page/search-page.pug
@@ -13,7 +13,7 @@ html
   body
     div(class='search-page')
       +header(['О нас', 'Услуги', 'Вакансии', 'Новости', 'Соглашения'])
-        +button({name: 'Войти', link: 'signin-page.html', className: 'btn__signin_header'})
+        +button({name: 'Войти', link: 'signin-page.html', additionalClass: (classes.indexOf('btn__signin_header') > -1) ? 'btn__signin_header': ''})
         +button({name:'Зарегистрироватьcя', link:'signup-page.html', className: 'btn__signup'})
       div(class='search-page__background')
         +form-search( 'Найдём номера под ваши пожелания', {checkin: 'Прибытие', checkout: 'Выезд', guests: 'Гости'})
