--- a/src/pages/signin-page/signin-page.pug
+++ b/src/pages/signin-page/signin-page.pug
@@ -13,7 +13,7 @@ html
   body
     div(class='signin-page')
       +header(['О нас', 'Услуги', 'Вакансии', 'Новости', 'Соглашения'])
-        +button({name: 'Войти', link: 'signin-page.html', className: 'btn__signin_header'})
+        +button({name: 'Войти', link: 'signin-page.html', additionalClass: (classes.indexOf('btn__signin_header') > -1) ? 'btn__signin_header': ''})
         +button({name: 'Зарегистрироватьcя', link: 'signup-page.html', className: 'btn__signup'})
       div(class='signin-page__background')
         +form-signin('Войти', 'Нет аккаунта на Toxin?')
