--- a/src/pages/signup-page/signup-page.pug
+++ b/src/pages/signup-page/signup-page.pug
@@ -13,8 +13,8 @@ html
   body
     div(class='signup-page')
       +header(['О нас', 'Услуги', 'Вакансии', 'Новости', 'Соглашения'])
-        +button({name: 'Войти', link: 'signin-page.html', className: 'btn__signin_header'})
-        +button({name: 'Зарегистрироватьcя', link: 'signup-page.html', className: 'btn__signup'})
+        +button({name: 'Войти', link: 'signin-page.html', additionalClass: (classes.indexOf('btn__signin_header') > -1) ? 'btn__signin_header': ''})
+        +button({name: 'Зарегистрироватьcя', link: 'signup-page.html', className: 'btn__signup btn__signup_header'})
       div(class='signup-page__background')
         +form-register({ title: 'Регистрация аккаунта',  birthday: 'дата рождения', data: 'данные для входа в сервис', offer: 'Получать спецпредложения', login: 'Уже есть аккаунт на Toxin'})
       +footer({slogan: 'Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»', offer:'Получайте специальные предложения и новости сервиса', copyright: 'Copyright © 2018 Toxin отель. Все права зачищены.'}, {name1: 'навигация', name2: 'о нас', name3: 'Служба поддержки', name4: 'Подписка'}, ['О нас', 'Новости', 'Служба поддержки', 'Услуги'], ['О сервисе', 'Наша команда', 'Вакансии', 'Инвесторы'], ['Соглашения', 'Сообщества', 'Связь с нами'])
