deleted folder images from components

--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -59,7 +59,7 @@
     text-align: center;
     text-transform: uppercase;
     color: #ffffff;
-    background-image: url(../images/white-arrow.svg);
+    background-image: url(./images/white-arrow.svg);
     background-repeat: no-repeat;
     background-position-x: 24rem;
     background-position-y: 1.2rem;
