--- a/src/pages/signin-page/signin-page.scss
+++ b/src/pages/signin-page/signin-page.scss
@@ -1,7 +1,7 @@
 .signin-page {
   &__background {
     min-height: 1010px;
-    background-image: url(../../components/images/bg_in.jpg);
+    background-image: url(./images/bg_in.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
