--- a/src/pages/signup-page/signup-page.scss
+++ b/src/pages/signup-page/signup-page.scss
@@ -1,7 +1,7 @@
 .signup-page {
   &__background {
     min-height: 930px;
-    background-image: url(../../components/images/bg_in.jpg);
+    background-image: url(./images/bg_in.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
