--- a/src/components/logo/logo.scss
+++ b/src/components/logo/logo.scss
@@ -1,5 +1,5 @@
 .logo {
-    background-image: url(../images/logo.svg);
+    background-image: url(./images/logo.svg);
     background-repeat: no-repeat;
     width: 210px;
     height: 60px;
