--- a/src/pages/search-page/search-page.scss
+++ b/src/pages/search-page/search-page.scss
@@ -2,7 +2,7 @@
   &__background {
     width: 100%;
     max-height: 1300px;
-    background-image: url(../../components/images/image.jpg);
+    background-image: url(./images/image.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     padding-top: 100px;
